Preventing word wrapping when dragging widgets whose text has spaces

--- a/FormDesigner/war/FormDesigner.css
+++ b/FormDesigner/war/FormDesigner.css
@@ -152,6 +152,7 @@ body, html {
   filter: alpha(opacity = 50);
   opacity: 0.5;
   color: red;
+  white-space: nowrap;
 }
 
 .purcforms-label-editor {
